Updated L5-swagger format
