# app/Http/Controllers/ProductController.php
@@ -17,12 +17,31 @@ class ProductController extends Controller
         $this->productRepository = $productRepository;
     }
 
+    /**
+     * @OA\Get(path="/api/products",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Products"},
+     *   @OA\Response(response="200",
+     *     description="Product Collection",
+     *   )
+     * )
+     */
     public function index()
     {
         $products = $this->productRepository->getAll();
         return ProductResource::collection($products);
     }
 
+    /**
+     * @OA\Post(
+     *   path="/api/products",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Products"},
+     *   @OA\Response(response="201",
+     *     description="Product Create",
+     *   )
+     * )
+     */
     public function store(Request $request)
     {
         $input = $request->only('title', 'description', 'image', 'price');
@@ -31,12 +50,49 @@ class ProductController extends Controller
         return response(new ProductResource($product), Response::HTTP_CREATED);
     }
 
+    /**
+     * @OA\Get(path="/api/products/{id}",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Products"},
+     *   @OA\Response(response="200",
+     *     description="User",
+     *   ),
+     *   @OA\Parameter(
+     *     name="id",
+     *     description="Product ID",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *        type="integer"
+     *     )
+     *   )
+     * )
+     */
     public function show($id)
     {
         $product = $this->productRepository->show($id);
         return new ProductResource($product);
     }
 
+    /**
+     * @OA\Put(
+     *   path="/api/products/{id}",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Products"},
+     *   @OA\Response(response="202",
+     *     description="Product Update",
+     *   ),
+     *   @OA\Parameter(
+     *     name="id",
+     *     description="Product ID",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *        type="integer"
+     *     )
+     *   )
+     * )
+     */
     public function update(Request $request, $id)
     {
 
@@ -45,6 +101,24 @@ class ProductController extends Controller
         return response(new ProductResource($product), Response::HTTP_ACCEPTED);
     }
 
+    /**
+     * @OA\Delete(path="/api/products/{id}",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Products"},
+     *   @OA\Response(response="204",
+     *     description="Product Delete",
+     *   ),
+     *   @OA\Parameter(
+     *     name="id",
+     *     description="Product ID",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *        type="integer"
+     *     )
+     *   )
+     * )
+     */
     public function destroy($id)
     {
         $this->productRepository->destroy($id);
