# app/Http/Controllers/RoleController.php
@@ -17,12 +17,31 @@ class RoleController extends Controller
         $this->roleRepository = $roleRepository;
     }
 
+    /**
+     * @OA\Get(path="/api/roles",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Roles"},
+     *   @OA\Response(response="200",
+     *     description="Role Collection",
+     *   )
+     * )
+     */
     public function index()
     {
         $roles = $this->roleRepository->getAll();
         return RoleResource::collection($roles);
     }
 
+    /**
+     * @OA\Post(
+     *   path="/api/roles",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Roles"},
+     *   @OA\Response(response="201",
+     *     description="Role Create",
+     *   )
+     * )
+     */
     public function store(Request $request)
     {
         $input = $request->all();
@@ -31,12 +50,49 @@ class RoleController extends Controller
         return response(new RoleResource($data), Response::HTTP_CREATED);
     }
 
+    /**
+     * @OA\Get(path="/api/roles/{id}",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Roles"},
+     *   @OA\Response(response="200",
+     *     description="User",
+     *   ),
+     *   @OA\Parameter(
+     *     name="id",
+     *     description="Role ID",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *        type="integer"
+     *     )
+     *   )
+     * )
+     */
     public function show($id)
     {
         $role = $this->roleRepository->show($id);
         return new RoleResource($role);
     }
 
+    /**
+     * @OA\Put(
+     *   path="/api/roles/{id}",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Roles"},
+     *   @OA\Response(response="202",
+     *     description="Role Update",
+     *   ),
+     *   @OA\Parameter(
+     *     name="id",
+     *     description="Role ID",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *        type="integer"
+     *     )
+     *   )
+     * )
+     */
     public function update(Request $request, $id)
     {
         $name = $request->only('name');
@@ -48,6 +104,24 @@ class RoleController extends Controller
         return response(new RoleResource($data), Response::HTTP_ACCEPTED);
     }
 
+    /**
+     * @OA\Delete(path="/api/roles/{id}",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Roles"},
+     *   @OA\Response(response="204",
+     *     description="Role Delete",
+     *   ),
+     *   @OA\Parameter(
+     *     name="id",
+     *     description="Role ID",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *        type="integer"
+     *     )
+     *   )
+     * )
+     */
     public function destroy($id)
     {
         $this->roleRepository->destroy($id);
