# app/Http/Controllers/UserController.php
@@ -20,12 +20,42 @@ class UserController extends Controller
         $this->userRepository = $userRepository;
     }
 
+    /**
+     * @OA\Get(path="/api/users",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Users"},
+     *   @OA\Response(response="200",
+     *     description="User Collection",
+     *   ),
+     *   @OA\Parameter(
+     *     name="page",
+     *     description="Pagination page",
+     *     in="query",
+     *     @OA\Schema(
+     *        type="integer"
+     *     )
+     *   )
+     * )
+     */
     public function index()
     {
         $users = $this->userRepository->getAll();
         return UserResource::collection($users);
     }
-
+    /**
+     * @OA\Post(
+     *   path="/api/users",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Users"},
+     *   @OA\Response(response="201",
+     *     description="User Create",
+     *   ),
+     *   @OA\RequestBody(
+     *     required=true,
+     *     @OA\JsonContent(ref="#/components/schemas/UserCreateRequest")
+     *   )
+     * )
+     */
     public function store(UserCreateRequest $request)
     {
         $input = $request->only('first_name', 'last_name', 'email', 'role_id');
@@ -34,12 +64,53 @@ class UserController extends Controller
         return response(new UserResource($user), Response::HTTP_CREATED);
     }
 
+    /**
+     * @OA\Get(path="/api/users/{id}",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Users"},
+     *   @OA\Response(response="200",
+     *     description="User",
+     *   ),
+     *   @OA\Parameter(
+     *     name="id",
+     *     description="User ID",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *        type="integer"
+     *     )
+     *   )
+     * )
+     */
     public function show($id)
     {
         $user = $this->userRepository->show($id);
         return new UserResource($user);
     }
 
+    /**
+     * @OA\Put(
+     *   path="/api/users/{id}",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Users"},
+     *   @OA\Response(response="202",
+     *     description="User Update",
+     *   ),
+     *   @OA\Parameter(
+     *     name="id",
+     *     description="User ID",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *        type="integer"
+     *     )
+     *   ),
+     *   @OA\RequestBody(
+     *     required=true,
+     *     @OA\JsonContent(ref="#/components/schemas/UserUpdateRequest")
+     *   )
+     * )
+     */
     public function update(UserUpdateRequest $request, $id)
     {
         $input = $request->all();
@@ -48,6 +119,24 @@ class UserController extends Controller
         return \response(new UserResource($user), Response::HTTP_ACCEPTED);
     }
 
+    /**
+     * @OA\Delete(path="/api/users/{id}",
+     *   security={{"bearerAuth":{}}},
+     *   tags={"Users"},
+     *   @OA\Response(response="204",
+     *     description="User Delete",
+     *   ),
+     *   @OA\Parameter(
+     *     name="id",
+     *     description="User ID",
+     *     in="path",
+     *     required=true,
+     *     @OA\Schema(
+     *        type="integer"
+     *     )
+     *   )
+     * )
+     */
     public function destroy($id)
     {
         $this->userRepository->destroy($id);
